add portfolio modal (partial)

--- a/v2/css/style.css
+++ b/v2/css/style.css
@@ -149,3 +149,12 @@ html {
   margin-left: 20px;
 }
 /* End of Portfolio */
+/* Portfolio Full */
+#modal-container {
+  background: #eeedef;
+  height: auto;
+  left: 0;
+  position: absolute;
+  top: 0;
+}
+/* End of Portfolio Full */
