--- a/v2/css/style.less
+++ b/v2/css/style.less
@@ -131,3 +131,15 @@ html {
     }
 }
 /* End of Portfolio */
+
+
+
+/* Portfolio Full */
+#modal-container {
+    background: @bg-color;
+    height: auto;
+    left: 0;
+    position: absolute;
+    top: 0;
+}
+/* End of Portfolio Full */
