add components and apply styles

--- a/v2/css/style.css
+++ b/v2/css/style.css
@@ -22,18 +22,24 @@
 .btn {
   box-shadow: 0px 1px 2px 1px #d3d2d3;
   display: inline-block;
-  padding: 10px;
+  padding: 8px 14px;
 }
 /* End of Global Var */
 /* Global Style */
 html {
   background: #eeedef;
 }
+a {
+  color: #333;
+  text-decoration: none;
+}
 .btn-more {
   box-shadow: 0px 1px 2px 1px #d3d2d3;
   display: inline-block;
-  padding: 10px;
+  padding: 8px 14px;
   background: #00c853;
+  color: #fff;
+  margin-top: 10px;
 }
 /* End of Global Style */
 /* Top Menu */
@@ -48,10 +54,13 @@ html {
   margin: 10px;
   padding: 3px;
   margin: 0;
+  padding-bottom: 0;
+  padding-top: 0;
 }
 #top-menu ul {
   margin: 0;
   list-style: none;
+  padding-left: 10px;
 }
 #top-menu ul > li {
   box-sizing: border-box;
@@ -59,7 +68,61 @@ html {
   height: auto;
   overflow: hidden;
   width: auto;
-  padding: 10px 5px;
+  float: left;
+  margin: 0 10px 0 0;
+}
+#top-menu ul > li > a {
+  border-bottom: 4px solid #e8e11a;
+  display: block;
+  font-weight: bold;
+  font-size: 16px;
+  margin: 0;
+  padding: 10px 15px;
+}
+#top-menu ul > li > a .nav-mobile {
+  background: #333;
+  border-radius: 50%;
+  color: #fff;
+  padding: 1px 5px;
+}
+#top-menu ul > li > a .nav-desktop {
+  display: none;
+}
+#top-menu ul > li > a:hover,
+#top-menu ul > li > a:focus,
+#top-menu ul > li > a:active {
+  background: #f4f08e;
+}
+#top-menu ul > li:first-child {
+  border-right: 2px solid #ddd;
+  padding-right: 10px;
+}
+#top-menu ul > li:first-child > a {
+  border-bottom: 4px solid #00af48;
+}
+#top-menu ul > li:first-child > a:hover,
+#top-menu ul > li:first-child > a:focus,
+#top-menu ul > li:first-child > a:active {
+  background: none;
+  color: #00c853;
+}
+#top-menu ul > li:first-child > a:hover .nav-mobile,
+#top-menu ul > li:first-child > a:focus .nav-mobile,
+#top-menu ul > li:first-child > a:active .nav-mobile {
+  background: #00c853;
+}
+@media (min-width: 480px) {
+  #top-menu ul {
+    padding-left: 20px;
+  }
+}
+@media (min-width: 768px) {
+  #top-menu ul {
+    padding-left: 40px;
+  }
+  #top-menu ul > li > a .nav-desktop {
+    display: inline-block;
+  }
 }
 /* End of Top Menu */
 /* Hero */
@@ -113,7 +176,7 @@ html {
 }
 /* End of About */
 /* Portfolio */
-#portfolio {
+#portfolio-container {
   box-sizing: border-box;
   display: block;
   height: auto;
@@ -124,9 +187,38 @@ html {
   margin: 10px;
   padding: 3px;
   margin-left: 0;
-  padding: 10px;
+  padding: 10px 40px;
 }
-#portfolio .portfolio {
+#portfolio-container #skillset,
+#portfolio-container #portfolio {
+  box-sizing: border-box;
+  display: block;
+  height: auto;
+  overflow: hidden;
+  width: 100%;
+}
+#portfolio-container #skillset {
+  overflow-x: hidden;
+}
+#portfolio-container #skillset .skillset {
+  box-shadow: 0px 1px 2px 1px #d3d2d3;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  margin-right: 10px;
+  margin-top: 10px;
+  padding: 2px 4px;
+}
+#portfolio-container #skillset .skillset.pro {
+  background: #00c853;
+}
+#portfolio-container #skillset .skillset.intermediate {
+  background: #FDA900;
+}
+#portfolio-container #skillset .skillset.novice {
+  background: #B9C518;
+}
+#portfolio-container #portfolio .portfolio {
   box-sizing: border-box;
   display: block;
   height: auto;
@@ -136,8 +228,8 @@ html {
   padding-bottom: 10px;
   width: 100%;
 }
-#portfolio .portfolio .portfolio-img-container,
-#portfolio .portfolio .portfolio-desc-container {
+#portfolio-container #portfolio .portfolio .portfolio-img-container,
+#portfolio-container #portfolio .portfolio .portfolio-desc-container {
   box-sizing: border-box;
   display: inline-block;
   height: auto;
@@ -145,16 +237,112 @@ html {
   width: auto;
   float: left;
 }
-#portfolio .portfolio .portfolio-desc-container {
+#portfolio-container #portfolio .portfolio .portfolio-img-container img {
+  box-shadow: 0px 1px 2px 1px #bab8ba;
+  height: 150px;
+  width: 300px;
+}
+#portfolio-container #portfolio .portfolio .portfolio-desc-container {
   margin-left: 20px;
+}
+#portfolio-container #portfolio .portfolio .portfolio-desc-container h3 {
+  margin: 0;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+#portfolio-container #portfolio .portfolio .portfolio-desc-container .portfolio-desc {
+  color: #909090;
+  font-size: 12px;
+}
+@media (min-width: 768px) {
+  #portfolio-container #skillset,
+  #portfolio-container #portfolio {
+    box-sizing: border-box;
+    display: inline-block;
+    height: auto;
+    overflow: hidden;
+    width: auto;
+    float: left;
+  }
+  #portfolio-container #skillset {
+    width: 25%;
+  }
+  #portfolio-container #portfolio {
+    width: 75%;
+    padding-left: 20px;
+  }
 }
 /* End of Portfolio */
 /* Portfolio Full */
 #modal-container {
-  background: #eeedef;
+  background: #fff;
   height: auto;
   left: 0;
-  position: absolute;
+  position: fixed;
   top: 0;
+  z-index: 999999;
+}
+.modal-open {
+  overflow: hidden;
+}
+.full-portfolio-container {
+  box-sizing: border-box;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  padding: 20px 20px 0 20px;
+}
+.full-portfolio-container .close-portfolio {
+  background: #eeedef;
+  float: right;
+}
+.full-portfolio-container .portfolio-full-title {
+  border-bottom: 1px solid #fff;
 }
 /* End of Portfolio Full */
+/* Contact */
+#contact {
+  box-sizing: border-box;
+  display: block;
+  height: auto;
+  overflow: hidden;
+  width: 100%;
+  background: #fffeff;
+  box-shadow: 0px 1px 2px 1px #d3d2d3;
+  margin: 10px;
+  padding: 3px;
+  background: #00953e;
+  margin: 0;
+  padding: 10px;
+}
+#contact a {
+  color: #e6e6e6;
+}
+#contact #contact-left,
+#contact #contact-right {
+  box-sizing: border-box;
+  display: inline-block;
+  height: auto;
+  overflow: hidden;
+  width: auto;
+  float: left;
+  width: 50%;
+}
+#contact #contact-left h3 {
+  font-size: 28px;
+  text-align: center;
+  margin-top: 40px;
+}
+#contact #contact-left h3 span {
+  color: #b3b3b3;
+  font-size: 12px;
+}
+#contact #contact-right ul {
+  list-style: none;
+}
+#contact #contact-right ul li {
+  margin-top: 5px;
+}
+#contact #contact-right ul li a {
+  font-weight: bold;
+}
+/* End of Contact */
