--- a/v2/css/style.less
+++ b/v2/css/style.less
@@ -3,6 +3,7 @@
 @fore-color: #FFFEFF; 
 @shadow-color: #D3D2D3;
 @accent-color: #00c853;
+@accent-yellow: #E8E11A;
 
 .block {
     box-sizing: border-box;
@@ -30,7 +31,7 @@
 .btn {
     box-shadow: 0px 1px 2px 1px @shadow-color;
     display: inline-block;
-    padding: 10px;
+    padding: 8px 14px;
 }
 
 /* End of Global Var */
@@ -40,10 +41,19 @@ html {
     background: @bg-color;
 }
 
+a {
+    color: #333;
+    text-decoration: none;
+}
+
 .btn-more {
     .btn;
     background: @accent-color;
+    color: #fff;
+    margin-top: 10px;
 }
+
+
 /* End of Global Style */
 
 /* Top Menu */
@@ -51,14 +61,89 @@ html {
     .block;
     .card;
     margin: 0;
+    padding-bottom: 0;
+    padding-top: 0;
 
     ul {
         margin: 0;
         list-style: none;
+        padding-left: 10px;
 
         > li {
             .inline-block;
-            padding: 10px 5px;
+            float: left;
+            margin: 0 10px 0 0;
+            
+
+
+            > a {
+                border-bottom: 4px solid @accent-yellow;
+                display: block; 
+                font-weight: bold;
+                font-size: 16px;
+                margin: 0;
+                padding: 10px 15px;
+
+                .nav-mobile {
+                    background: #333;
+                    border-radius: 50%;
+                    color: #fff;
+                    padding: 1px 5px; 
+                }
+
+                .nav-desktop {
+                    display: none;
+                }
+                
+                &:hover, &:focus, &:active {
+                    background: lighten(@accent-yellow, 25%);
+                }
+
+
+            }
+
+            &:first-child {
+                border-right: 2px solid #ddd;
+                padding-right: 10px;
+
+                > a {
+                    
+                    border-bottom: 4px solid darken(@accent-color, 5%);
+
+                    &:hover, &:focus, &:active {
+                        background: none;
+                        color: @accent-color;
+                        
+                        .nav-mobile {
+                            background: @accent-color;;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (min-width: 480px) {
+    #top-menu {
+        ul {
+            padding-left: 20px;
+        }
+    }
+}
+
+@media (min-width: 768px) {
+    #top-menu {
+        ul {
+            padding-left: 40px;
+
+            > li {
+                > a {
+                    .nav-desktop {
+                        display: inline-block;
+                    }
+                }
+            }
         }
     }
 }
@@ -107,28 +192,102 @@ html {
 /* End of About */
 
 /* Portfolio */
-#portfolio {
+#portfolio-container {
     .block;
     .card;
     margin-left: 0;
-    padding: 10px;
+    padding: 10px 40px;
 
-    .portfolio {
+    #skillset, #portfolio {
         .block;
-        border-bottom: 1px solid #ddd;
-        margin-bottom: 20px;
-        padding-bottom: 10px;
-        width: 100%;
+    }
 
-        .portfolio-img-container, .portfolio-desc-container {
+    #skillset {
+        overflow-x: hidden;
+
+        .skillset {
+            box-shadow: 0px 1px 2px 1px @shadow-color;
+            color: #fff;
+            cursor: pointer;
+            display: inline-block;
+            margin-right: 10px;
+            margin-top: 10px;
+            padding: 2px 4px;
+
+            &.pro {
+                background: @accent-color;
+            }
+
+            &.intermediate {
+                background: #FDA900;
+            }
+
+            &.novice {
+                background: #B9C518;
+            }
+        }
+    }
+
+    #portfolio {
+        
+
+        .portfolio {
+            .block;
+            border-bottom: 1px solid #ddd;
+            margin-bottom: 20px;
+            padding-bottom: 10px;
+            width: 100%;
+
+            .portfolio-img-container, .portfolio-desc-container {
+                .inline-block;
+                float: left;
+            }
+
+            .portfolio-img-container {
+                img {
+                    box-shadow: 0px 1px 2px 1px darken(@shadow-color, 10%);
+                    height: 150px;
+                    width: 300px;
+                }
+            }
+
+            .portfolio-desc-container {
+                margin-left: 20px;
+
+                h3 {
+                    margin: 0;
+                    padding-top: 5px;
+                    padding-bottom: 5px;
+                }
+
+                .portfolio-desc {
+                    color: #909090;
+                    font-size: 12px;
+                }
+            }
+        }
+    }
+
+    
+}
+
+@media (min-width: 768px) {
+    #portfolio-container {
+        #skillset, #portfolio {
             .inline-block;
             float: left;
         }
 
-        .portfolio-desc-container {
-            margin-left: 20px;
+        #skillset {
+            width: 25%;
+        }
+
+        #portfolio {
+            width: 75%;
+            padding-left: 20px;
         }
     }
+    
 }
 /* End of Portfolio */
 
@@ -136,10 +295,112 @@ html {
 
 /* Portfolio Full */
 #modal-container {
-    background: @bg-color;
+    background: #fff;
     height: auto;
     left: 0;
-    position: absolute;
+    position: fixed;
     top: 0;
+    z-index: 999999;
+}
+
+.modal-open {
+    overflow: hidden;
+}
+
+.full-portfolio-container {
+    box-sizing: border-box;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    padding: 20px 20px 0 20px;
+
+    .close-portfolio {
+        background: @bg-color;
+        float: right;
+    }
+
+    .portfolio-full-title {
+        border-bottom: 1px solid #fff;
+    }
+}
+
+@media (min-width: 480px) {
+    
+}
+
+@media (min-width: 768px) {
+    
+}
+
+@media (min-width: 992px) {
+
+}
+
+@media (min-width: 1200px) {
+
 }
 /* End of Portfolio Full */
+
+/* Contact */
+#contact {
+    .block;
+    .card;
+    background: darken(@accent-color, 10%);
+    margin: 0;
+    padding: 10px;
+
+    a {
+        color: darken(#fff, 10%);
+    }
+
+    #contact-left, #contact-right {
+        .inline-block;
+        float: left;
+        width: 50%;
+    }
+
+    #contact-left {
+        h3 {
+            font-size: 28px;
+            text-align: center;
+            margin-top: 40px;
+
+            span {
+                color: darken(#fff, 30%);
+                font-size: 12px;
+            }
+        }
+    }
+
+    #contact-right {
+        ul {
+            list-style: none;
+
+            li {
+                margin-top: 5px;
+
+
+                a {
+                    font-weight: bold;
+                }
+            }
+        }
+    }
+
+}
+/* End of Contact */
+
+@media (min-width: 480px) {
+    
+}
+
+@media (min-width: 768px) {
+    
+}
+
+@media (min-width: 992px) {
+
+}
+
+@media (min-width: 1200px) {
+
+}
