--- a/v2/css/style.less
+++ b/v2/css/style.less
@@ -1,4 +1,6 @@
 /* Global Var */
+@import url(http://fonts.googleapis.com/css?family=Raleway:400,700);
+
 @bg-color: #EEEDEF;
 @fore-color: #FFFEFF; 
 @shadow-color: #D3D2D3;
@@ -39,6 +41,10 @@
 /* Global Style */
 html {
     background: @bg-color;
+
+    * {
+        font-family: 'Raleway', sans-serif;
+    }
 }
 
 a {
@@ -331,6 +337,48 @@ a {
 
     .portfolio-full-title {
         border-bottom: 1px solid #fff;
+
+        text-align: center;
+
+        h2 {
+            font-size: 32px;
+            margin-bottom: 5px;
+            margin-left: 40px;
+        }
+
+        .portfolio-url {
+            display: block;
+            color: #909090;
+
+            &:hover, &:focus, &:active {
+                color: darken(#909090, 20%);
+            }
+        }
+        
+    }
+
+    .portfolio-full-body {
+        margin-top: 20px;
+
+        .portfolio-full-img-container {
+            text-align: center;
+
+            img {
+                margin-bottom: 20px;
+            }
+            
+        }
+
+        .portfolio-full-description-item {
+            display: block;
+            margin-bottom: 3px;
+            margin-top: 3px;
+        }
+
+        h3 {
+            font-size: 24px;
+            margin-top: 30px;
+        }
     }
 }
 /* End of Portfolio Full */
