--- a/assets/src/css/main.scss
+++ b/assets/src/css/main.scss
@@ -11,6 +11,18 @@ body {
     width: 100%;
 }
 
+a {
+    color: #444;
+    font-weight: bold;
+    text-decoration: none;
+
+    &:hover,
+    &:active,
+    &:focus {
+        text-decoration: underline;
+    }
+}
+
 .hero-container {
     align-content: center;
     display: flex;
@@ -22,6 +34,18 @@ body {
 
     .hero, .sub-hero {
         width: 100%;
+    }
+}
+
+.swal2-modal {
+    .swal2-content {
+        font-size: 16px;
+        line-height: 20px;
+
+        .hint {
+            color: rgb(135, 135, 135);
+            font-size: 14px;
+        }
     }
 }
 
