--- a/template/index.html
+++ b/template/index.html
@@ -7,7 +7,7 @@
     
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="assets/build/css/bundle-e1051a305f.css">
+        <link rel="stylesheet" href="assets/build/css/bundle.css">
     </head>
     <body>
         <div class="hero-container">
@@ -21,6 +21,6 @@
             </div>
         </div>
         
-        <script src="assets/build/js/bundle-8e89652d40.js"></script>
+        <script src="assets/build/js/bundle.js"></script>
     </body>
 </html>
