add experience page

--- a/src/assets/css/_main.scss
+++ b/src/assets/css/_main.scss
@@ -5,3 +5,4 @@
 @import './components/_navbar';
 @import './components/_home';
 @import './components/_projects';
+@import './components/_experiences';
