change about to contact page

--- a/src/assets/css/_main.scss
+++ b/src/assets/css/_main.scss
@@ -6,3 +6,4 @@
 @import './components/_home';
 @import './components/_projects';
 @import './components/_experiences';
+@import './components/_contact';
