--- a/src/assets/css/components/_contact.scss
+++ b/src/assets/css/components/_contact.scss
@@ -1,6 +1,6 @@
 .contact-content {
     margin: 50px auto;
-    width: 60%;
+    width: 80%;
 }
 
 .contact {
@@ -19,13 +19,35 @@
 
     &-icon {
         float: left;
-        width: 60px;
+        width: 40px;
     }
 
     &-detail {
         float: left;
-        font-size: 18px;
-        margin-left: 50px;
-        margin-top: 20px;
+        font-size: 14   px;
+        margin-left: 10px;
+        margin-top: 10px;
+        overflow-wrap: break-word;
+        width: 80%;
+    }
+}
+
+@media screen and (min-width: 641px) {
+    .contact {
+        &-icon {
+            width: 60px;
+        }
+
+        &-detail {
+            font-size: 18px;
+            margin-left: 50px;
+            margin-top: 20px;
+        }
+    }
+}
+
+@media screen and (min-width: 1025px) {
+    .contact-content {
+        width: 80%;
     }
 }
